--- a/vignettes/likelihood-free-mcmc.Rmd
+++ b/vignettes/likelihood-free-mcmc.Rmd
@@ -32,7 +32,7 @@ model_seed <- 122
 model_sir <- ModelSIR(
   name = "COVID-19",
   prevalence = .1,
-  transmission_rate = .9,
+  transmission_rate = .3,
   recovery_rate = .3
 )
 
@@ -58,7 +58,7 @@ summary(model_sir)
 ## Setup LFMCMC
 ```{r lfmcmc-setup}
 # Extract the observed data from the model
-obs_data <- unname(as.integer(get_today_total(model_sir)))
+obs_data <- get_today_total(model_sir)
 
 # Define the LFMCMC simulation function
 simfun <- function(params) {
@@ -71,8 +71,8 @@ simfun <- function(params) {
     ndays = 50
   )
 
-  res <- unname(as.integer(get_today_total(model_sir)))
-  return(res)
+  get_today_total(model_sir)
+
 }
 
 # Define the LFMCMC summary function
@@ -83,19 +83,14 @@ sumfun <- function(dat) {
 # Define the LFMCMC proposal function
 # - Based on proposal_fun_normal from lfmcmc-meat.hpp
 propfun <- function(params_prev) {
-  res <- params_prev + rnorm(length(params_prev), )
+  res <- plogis(qlogis(params_prev) + rnorm(length(params_prev)))
   return(res)
 }
 
 # Define the LFMCMC kernel function
 # - Based on kernel_fun_uniform from lfmcmc-meat.hpp
 kernelfun <- function(stats_now, stats_obs, epsilon) {
-
-  ans <- sum(mapply(function(v1, v2) (v1 - v2)^2,
-    stats_obs,
-    stats_now))
-
-  return(ifelse(sqrt(ans) < epsilon, 1.0, 0.0))
+  dnorm(sqrt(sum((stats_now - stats_obs)^2)))
 }
 
 # Create the LFMCMC model
@@ -110,9 +105,9 @@ lfmcmc_model <- LFMCMC(model_sir) |>
 ## Run LFMCMC simulation
 ```{r lfmcmc-run}
 # Set initial parameters
-par0 <- as.double(c(0.1, 0.5))
+par0 <- c(0.1, 0.5)
 n_samp <- 2000
-epsil <- as.double(1.0)
+epsil <- 1.0
 
 # Run the LFMCMC simulation
 run_lfmcmc(
