Add note on versioning policy to README

--- a/README.Rmd
+++ b/README.Rmd
@@ -21,7 +21,7 @@ knitr::opts_chunk$set(
 [![CRANlogs downloads](https://cranlogs.r-pkg.org/badges/grand-total/epiworldR)](https://cran.r-project.org/package=epiworldR)
 [![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg)](https://github.com/UofUEpiBio/epiworldR/blob/master/LICENSE.md)
 [![codecov](https://codecov.io/gh/UofUEpiBio/epiworldR/graph/badge.svg?token=ZB8FVLI7GN)](https://app.codecov.io/gh/UofUEpiBio/epiworldR)
-[![ForeSITE Group](https://github.com/EpiForeSITE/software/blob/e82ed88f75e0fe5c0a1a3b38c2b94509f122019c/docs/assets/foresite-software-badge.svg)](https://github.com/EpiForeSITE)
+[![ForeSITE Group](https://github.com/EpiForeSITE/software/raw/e82ed88f75e0fe5c0a1a3b38c2b94509f122019c/docs/assets/foresite-software-badge.svg)](https://github.com/EpiForeSITE)
 <!-- badges: end -->
 
 This R package is a wrapper of the C++ library [epiworld](https://github.com/UofUEpiBio/epiworld){target="_blank"}. It provides a general framework for modeling disease transmission using [agent-based models](https://en.wikipedia.org/w/index.php?title=Agent-based_model&oldid=1153634802){target="_blank"}. Some of the main features include:
@@ -294,6 +294,16 @@ You may want to check out other R packages for agent-based modeling: [`ABM`](htt
 [`cystiSim`](https://cran.r-project.org/package=cystiSim){target="_blank"},
 [`villager`](https://cran.r-project.org/package=villager){target="_blank"}, and
 [`RNetLogo`](https://cran.r-project.org/package=RNetLogo){target="_blank"}.
+
+# Contributing to epiworldR
+
+We welcome contributions to the epiworldR package!
+If you would like to contribute, please create a pull request.
+
+Note our use of versioning:
+Following [Semantic Versioning](https://semver.org) the first three version numbers of `epiworldR` mirror that of the core C++ library `epiworld`: MAJOR.MINOR.PATCH.
+These three numbers are kept in sync across both libraries, however, the R package has an additional version number to track changes on the R side that aren't connected to changes on the C++ side.
+
 
 ## Code of Conduct
 
