--- a/vignettes/getting-started.Rmd
+++ b/vignettes/getting-started.Rmd
@@ -3,6 +3,7 @@ title: "Getting started with epiworldR"
 author:
   - Derek Meyer
   - George Vega Yon
+  - Andrew Pulsipher
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
@@ -104,6 +105,7 @@ To make a mermaid diagram of the model states and transition probabilities, use 
 This can be rendered with an R package, such as `DiagrammeR`, but since `DiagrammeR` uses an old version of mermaid.js, we need to modify the output of `draw_mermaid()` slightly to ensure the diagram is displayed correctly.
 
 ```{r mermaid-diagram}
+install.packages("DiagrammeR")
 library(DiagrammeR)
 # Capture the output of the draw_mermaid function
 m_diagram <- capture.output(draw_mermaid(model_sir))
