--- a/vignettes/getting-started.Rmd
+++ b/vignettes/getting-started.Rmd
@@ -3,6 +3,7 @@ title: "Getting started with epiworldR"
 author:
   - Derek Meyer
   - George Vega Yon
+  - Andrew Pulsipher
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
@@ -99,6 +100,20 @@ applies to moving backward; an agent cannot become susceptible again after
 infection.
 
 ## Plot
+
+To make a mermaid diagram of the model states and transition probabilities, use the `draw_mermaid()` function.
+This can be rendered with an R package, such as `DiagrammeR`, but since `DiagrammeR` uses an old version of mermaid.js, we need to modify the output of `draw_mermaid()` slightly to ensure the diagram is displayed correctly.
+
+```{r mermaid-diagram}
+library(DiagrammeR)
+# Capture the output of the draw_mermaid function
+m_diagram <- draw_mermaid(model_sir)
+# Modify first line for compatibility with DiagrammeR
+# - Necessary because DiagrammeR uses old version of mermaid.js
+m_diagram <- paste0("graph", substring(m_diagram, 10))
+
+mermaid(m_diagram)
+```
 
 ## Extracting information
 
