--- a/vignettes/advanced-modeling.Rmd
+++ b/vignettes/advanced-modeling.Rmd
@@ -5,7 +5,7 @@ author:
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{LFMCMC}
+  %\VignetteIndexEntry{Advanced Modeling - Multiple Diseases, Tools, and Events}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
