--- a/vignettes/getting-started.Rmd
+++ b/vignettes/getting-started.Rmd
@@ -101,18 +101,17 @@ infection.
 
 ## Plot
 
-To make a mermaid diagram of the model states and transition probabilities, use the `draw_mermaid()` function.
-This can be rendered with an R package, such as `DiagrammeR`, but since `DiagrammeR` uses an old version of mermaid.js, we need to modify the output of `draw_mermaid()` slightly to ensure the diagram is displayed correctly.
+To make a mermaid diagram of the model states and transition probabilities, use the `draw_mermaid()` function. By default, we can print the diagram to the console like this:
+
+```{r generate-diagram}
+diagram <- draw_mermaid(model_sir)
+print(diagram)
+```
+
+If the `DiagrammeR` package is installed, we can visualize the diagram directly in R:
 
 ```{r mermaid-diagram}
-library(DiagrammeR)
-# Capture the output of the draw_mermaid function
-m_diagram <- draw_mermaid(model_sir)
-# Modify first line for compatibility with DiagrammeR
-# - Necessary because DiagrammeR uses old version of mermaid.js
-m_diagram <- paste0("graph", substring(m_diagram, 10))
-
-mermaid(m_diagram)
+plot(diagram)
 ```
 
 ## Extracting information
